# uniffi-bindgen-dart

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PLAN_TEMPLATE.md  README.md  docker_build.sh  docker_test_bindings.sh  justfile
.github/workflows/: ci.yml  publish.yml
binding_tests/: pubspec.yaml
binding_tests/test/: compound_demo_test.dart  coverall_demo_test.dart  keywords_demo_test.dart  library_mode_demo_test.dart  smoke_test.dart
crates/ubdg_bindgen/: Cargo.toml
crates/ubdg_bindgen/src/: cli.rs  lib.rs  main.rs
crates/ubdg_bindgen/src/dart/: async_support.rs  callback.rs  callback_interface.rs  codec.rs  compounds.rs  config.rs  custom.rs  enum_.rs  error.rs  ffi_buffer.rs  mod.rs  naming.rs  object.rs  oracle.rs  parsing.rs  primitives.rs  record.rs  render_bound_methods.rs  render_data_models.rs  render_helpers.rs  render_objects.rs  render_stubs.rs  type_map.rs  types.rs
crates/ubdg_bindgen/src/dart/render_bound_methods/: context.rs  functions.rs  mod.rs  objects.rs  setup.rs
crates/ubdg_bindgen/tests/: golden_generated.rs
crates/ubdg_runtime/: Cargo.toml
crates/ubdg_runtime/src/: lib.rs
crates/ubdg_testing/: Cargo.toml
crates/ubdg_testing/src/: lib.rs
docs/: configuration.md  release.md  supported-features.md  testing.md
example/: README.md
fixtures/compound-demo/expected/: compound_demo.dart
fixtures/compound-demo/native-lib/: Cargo.toml
fixtures/compound-demo/native-lib/src/: lib.rs
fixtures/compound-demo/src/: compound-demo.udl
fixtures/coverall-demo/expected/: coverall_demo.dart
fixtures/coverall-demo/native-lib/: Cargo.toml
fixtures/coverall-demo/native-lib/src/: lib.rs
fixtures/coverall-demo/src/: coverall-demo.udl
fixtures/custom-types-demo/expected/: custom_types_demo.dart
fixtures/custom-types-demo/src/: custom-types-demo.udl
fixtures/docstrings-demo/expected/: docstrings_demo.dart
fixtures/docstrings-demo/src/: docstrings-demo.udl
fixtures/error-types-demo/: uniffi.toml
fixtures/error-types-demo/expected/: error_types_demo.dart
fixtures/ext-types-demo/: uniffi.toml
fixtures/ext-types-demo/expected/: ext_types_demo.dart
fixtures/ext-types-demo/src/: ext-types-demo.udl
fixtures/futures-stress/expected/: futures_stress.dart
fixtures/futures-stress/src/: futures-stress.udl
fixtures/keywords-demo/expected/: keywords_demo.dart
fixtures/keywords-demo/native-lib/: Cargo.toml
fixtures/keywords-demo/native-lib/src/: lib.rs
fixtures/keywords-demo/src/: keywords-demo.udl
fixtures/library-mode-demo/expected/: library_mode_demo.dart
fixtures/library-mode-demo/native-lib/: Cargo.toml
fixtures/library-mode-demo/native-lib/src/: lib.rs
fixtures/model-types-demo/expected/: model_types_demo.dart
fixtures/model-types-demo/src/: model-types-demo.udl
fixtures/non-exhaustive-demo/expected/: non_exhaustive_demo.dart
fixtures/record-enum-methods/expected/: record_enum_methods_library.dart
fixtures/record-enum-methods/native-lib/: Cargo.toml
fixtures/record-enum-methods/native-lib/src/: lib.rs
fixtures/regressions/: README.md
fixtures/regressions/async-object-lift-demo/expected/: async_object_lift_demo.dart
fixtures/regressions/async-object-lift-demo/src/: async-object-lift-demo.udl
fixtures/regressions/callback-custom-async-demo/expected/: callback_custom_async_demo.dart
fixtures/regressions/callback-custom-async-demo/src/: callback-custom-async-demo.udl
fixtures/regressions/custom-shadow-demo/expected/: custom_shadow_demo.dart
fixtures/regressions/custom-shadow-demo/src/: custom-shadow-demo.udl
fixtures/regressions/defaults-demo/expected/: defaults_demo.dart
fixtures/regressions/defaults-demo/src/: defaults-demo.udl
fixtures/regressions/forward-refs-demo/expected/: forward_refs_demo.dart
fixtures/rename-demo/: uniffi.toml
fixtures/rename-demo/expected/: rename_demo.dart
fixtures/rename-demo/src/: rename-demo.udl
fixtures/simple-fns/: uniffi.toml
fixtures/simple-fns/expected/: simple_fns.dart
fixtures/simple-fns/native-lib/: Cargo.toml
fixtures/simple-fns/native-lib/src/: lib.rs
fixtures/simple-fns/src/: simple-fns.udl
fixtures/trait-demo/expected/: trait_demo.dart
fixtures/trait-demo/src/: trait-demo.udl
fixtures/type-limits-demo/expected/: type_limits_demo.dart
integration/dart_package_template/: README.md
scripts/: analyze_golden.sh  build_bindings.sh  build_compound_demo_fixture.sh  build_coverall_demo_fixture.sh  build_fixture.sh  build_keywords_demo_fixture.sh  build_library_mode_demo_fixture.sh  build_record_enum_methods_fixture.sh  test_bindings.sh
(+1 files in other folders)
