[workspace]
members = [
  "crates/ubdg_bindgen",
  "crates/ubdg_runtime",
  "crates/ubdg_testing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Nick Chapman <nchapman@fastmail.com>"]
repository = "https://github.com/aspect-build/uniffi-bindgen-dart"
keywords = ["uniffi", "dart", "ffi", "codegen", "bindings"]
categories = ["development-tools::ffi"]

[workspace.dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.0"
toml = "0.8.20"
uniffi_bindgen = "0.31.0"
