[package]
name = "ubdg_bindgen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uniffi-bindgen-dart"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
uniffi_bindgen.workspace = true

[dev-dependencies]
tempfile.workspace = true
