[package]
name = "ubdg_bindgen"
description = "Dart bindings generator for UniFFI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uniffi-bindgen-dart"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
uniffi_bindgen.workspace = true

[dev-dependencies]
tempfile.workspace = true
