[package]
name = "uniffi-bindgen-dart"
description = "Dart bindings generator for UniFFI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "uniffi_bindgen_dart"

[[bin]]
name = "uniffi-bindgen-dart"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
uniffi_bindgen.workspace = true

[dev-dependencies]
tempfile.workspace = true
