[package]
name = "uniffi-bindgen-dart-runtime"
description = "Runtime support library for uniffi-bindgen-dart generated bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "uniffi_bindgen_dart_runtime"

[dependencies]
