[package]
name = "uniffi-bindgen-dart-testing"
description = "Test utilities for uniffi-bindgen-dart"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "uniffi_bindgen_dart_testing"

[dependencies]
