[package]
name = "uniffi_record_enum_methods"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["scaffolding-ffi-buffer-fns", "tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }

[workspace]
